# SFMLProject

./: CMakeLists.txt  README.md
src/: main.cpp
src/Core/: Core.cpp  Core.hpp
src/GameObject/: IGameObject.hpp
src/GameObject/Button/: AButton.cpp  AButton.hpp  MenuButton.cpp  MenuButton.hpp
src/GameObject/Entity/: AEntity.cpp  AEntity.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
